--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "leaflet": "^1.5.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-leaflet": "^2.4.0",
