--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "@testing-library/jest-dom": "^4.1.0",
     "@testing-library/react": "^9.3.0",
     "deep-freeze": "0.0.1",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
     "eslint-plugin-jest": "^22.17.0",
     "json-server": "^0.15.1",
     "redux-devtools-extension": "^2.13.8",
